[project]
name = "ck3-modding-llm-autotune"
version = "0.1.0"
description = "Fine-tune a local LLM to natively understand CK3 modding"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4.0",
    "unsloth[colab-new]>=2024.8",
    "transformers>=4.43.0",
    "datasets>=2.20.0",
    "peft>=0.12.0",
    "trl>=0.9.0",
    "bitsandbytes>=0.43.0",
    "accelerate>=0.33.0",
    "openai>=1.35.0",
    "xformers>=0.0.27",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
